// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should render 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 fBzKtL"
    color="success"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a danger color 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 dPqbUZ"
    color="danger"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a hint color 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 fauZlU"
    color="hint"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a info color 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 cZeekg"
    color="info"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a success color 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 fBzKtL"
    color="success"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a warning color 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 hXrubu"
    color="warning"
    type="radio"
  />
</div>
`;
